Add the deployment in main.yaml and add the procfile

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,3 +53,16 @@ jobs:
         run: |
           pip install pytest-cov
           python -m pytest --doctest-modules --ignore=main.py --cov
+  deploy:
+    needs: test
+    runs-on: ubuntu-latest
+    if: ${{ github.ref_name == 'main' }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Deploy to Heroku
+        uses: akhileshns/heroku-deploy@v3.12.12
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: "examenpython1"
+          heroku_email: "christophe.guy7954@orange.fr"
